--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
