added PWA support

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Let's Stream",
-  "name": "Let's Stream",
+  "name": "Let's Stream - Video Player",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +10,24 @@
     {
       "src": "android-chrome-192x192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "android-chrome-512x512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#f39c12",
-  "background_color": "#ecf0f1"
+  "background_color": "#ecf0f1",
+  "orientation": "any",
+  "categories": ["entertainment", "video"],
+  "description": "A modern video streaming application",
+  "dir": "ltr",
+  "lang": "en",
+  "prefer_related_applications": false
 }
