avatar plus search update

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_TMDB_API_KEY=297f1b91919bae59d50ed815f8d2e14c
 REACT_APP_TMDB_BASE_URL=https://api.themoviedb.org/3
+REACT_APP_TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p
