--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.15.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-share": "^5.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
