--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,5 +29,21 @@
   "description": "A modern video streaming application",
   "dir": "ltr",
   "lang": "en",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "video",
+          "accept": ["video/*"]
+        }
+      ]
+    }
+  }
 }
