--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,16 +1,30 @@
-```diff
---- a/.github/workflows/main.yml
-+++ b/.github/workflows/main.yml
-@@ -34,7 +34,7 @@
-           node-version: ${{ matrix.node-version }}
-       - name: Install dependencies
-         run: npm ci
--      - name: Run ESLint
--        run: npm run lint
-+      - name: Run ESLint (ignoring no-unused-vars for build)
-+        run: npm run lint -- --quiet --max-warnings=0
-       - name: Run tests
-         run: npm test
-       - name: Build
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-```
+name: Node.js CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build:no-test --silent
