Enhance offline support with error handling in Navbar; update meta tags and manifest for improved app description and theme color; add offline HTML page and service worker for caching

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "Let's Stream",
-  "name": "Let's Stream - Video Player",
+  "short_name": "LetsStream",
+  "name": "LetsStream - Watch Movies & TV Shows",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
@@ -22,11 +22,11 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#10b981",
-  "background_color": "#ecf0f1",
+  "theme_color": "#000000",
+  "background_color": "#ffffff",
   "orientation": "any",
   "categories": ["entertainment", "video"],
-  "description": "A modern video streaming application",
+  "description": "Stream your favorite movies and TV shows",
   "dir": "ltr",
   "lang": "en",
   "prefer_related_applications": false,
@@ -45,5 +45,12 @@
         }
       ]
     }
-  }
+  },
+  "shortcuts": [
+    {
+      "name": "Search",
+      "url": "/search",
+      "description": "Search for movies and TV shows"
+    }
+  ]
 }
