--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.15.0",
     "lodash.debounce": "^4.0.8",
+    "postprocessing": "^6.36.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -24,6 +25,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "three": "^0.172.0",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
