Fix typo in application name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LetsStream",
-  "name": "LetsStream - Watch Movies & TV Shows",
+  "short_name": "Let's Stream",
+  "name": "Let's Stream - Watch Movies & TV Shows",
   "icons": [
     {
       "src": "favicon.ico",
