--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.2",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "lodash.debounce": "^4.0.8",
     "postprocessing": "^6.36.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
