--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-share": "^5.1.1",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.28.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "three": "^0.172.0",
